# zigzag_cleaner

src/zigzag_cleaner/: .gitignore  CMakeLists.txt  README.md  package.xml
src/zigzag_cleaner/launch/: wall_following.launch  zigzag_node.launch
src/zigzag_cleaner/maps/: room_map.pgm
src/zigzag_cleaner/scripts/: wall_follow_node.py  zigzag_node.py
src/zigzag_cleaner/src/: frames.gv
